# VLM-based_semantic_navigation_ROS2

./: README.md  requirements.txt
m-explore-ros2/explore/config/: params.yaml  params_costmap.yaml
m-explore-ros2/explore/include/explore/: explore.h
m-explore-ros2/explore/src/: explore.cpp
turtlebot3_simulations/turtlebot3_gazebo/launch/: spawn_turtlebot3.launch.py  turtlebot3_office.launch.py
turtlebot3_simulations/turtlebot3_gazebo/map/: office_map.pgm  office_map.yaml
turtlebot3_simulations/turtlebot3_gazebo/models/turtlebot3_burger/: model.sdf
turtlebot3_simulations/turtlebot3_gazebo/models/turtlebot3_waffle/: model.sdf
turtlebot3_simulations/turtlebot3_gazebo/urdf/: turtlebot3_burger.urdf  turtlebot3_waffle.urdf
turtlebot3_simulations/turtlebot3_gazebo/worlds/: house3.world  office.world  office_2.world  office_3.world  office_small.world  office_world.world
vlm_nav_pkg/: package.xml  requirement.txt  setup.cfg  setup.py
vlm_nav_pkg/config/: example_object_detection_vlm.json
vlm_nav_pkg/vlm_nav_pkg/: point_nav.py  semantic_nav.py
vlm_perception_pkg/: package.xml  setup.cfg  setup.py
vlm_perception_pkg/vlm_perception_pkg/: multi_waypoint_navigation.py  simple_detection.py  vlm_detection.py
