<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vlm_nav_pkg</name>
  <version>0.0.0</version>
  <description>A package for semantic navigation using VLM (Vision-Language Models) and CLIP.</description>
  <maintainer email="bhu16300@gmail.com">ariel</maintainer>
  <license>Apache-2.0</license>

  <!-- Declare all build, build_export, and executable dependencies -->
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_simple_commander</depend>
  <depend>nav2_bringup</depend> 
  <exec_depend>python3-pytorch</exec_depend>
  <exec_depend>python3-torchvision</exec_depend>
  <exec_depend>python3-clip</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
